Dockerfile and nginx config updated to support SSL

--- a/default.conf
+++ b/default.conf
@@ -1,7 +1,15 @@
 server {
-    listen       80;
-    server_name  localhost;
+    listen  80;
+    server_name  www.cryptotechspace.com;
+    return 301 https://www.cryptotechspace.com$request_uri;
+}
 
+server {
+    listen 443 ssl;
+    server_name  www.cryptotechspace.com;
+
+    ssl_certificate /certs/certificate.crt;
+    ssl_certificate_key /certs/private.key;
 
     location / {
         root   /usr/share/nginx/html;
@@ -15,5 +23,4 @@ server {
     location = /50x.html {
         root   /usr/share/nginx/html;
     }
-
 }
