nginx config fixed

--- a/default.conf
+++ b/default.conf
@@ -1,12 +1,19 @@
 server {
     listen  80;
-    server_name  www.cryptotechspace.com;
-    return 301 https://www.cryptotechspace.com$request_uri;
+    listen [::]:80;
+    server_name  cryptotechspace.com www.cryptotechspace.com;
+    return 301 https://cryptotechspace.com$request_uri;
 }
 
 server {
-    listen 443 ssl;
-    server_name  www.cryptotechspace.com;
+    listen 443 ssl http2;
+    server_name www.cryptotechspace.com
+    return 301 https://cryptotechspace.com$request_uri;
+}
+
+server {
+    listen 443 ssl http2;
+    server_name  cryptotechspace.com;
 
     ssl_certificate /certs/certificate.crt;
     ssl_certificate_key /certs/private.key;
