--- a/default.conf
+++ b/default.conf
@@ -7,7 +7,9 @@ server {
 
 server {
     listen 443 ssl http2;
-    server_name www.cryptotechspace.com
+    server_name www.cryptotechspace.com;
+    ssl_certificate /certs/certificate.crt;
+    ssl_certificate_key /certs/private.key;
     return 301 https://cryptotechspace.com$request_uri;
 }
 
