--- a/default.conf
+++ b/default.conf
@@ -26,10 +26,26 @@ server {
         try_files $uri $uri/ /index.html;
     }
 
-  
+
     error_page   500 502 503 504  /50x.html;
-    
+
     location = /50x.html {
         root   /usr/share/nginx/html;
     }
 }
+
+server {
+    listen 443 ssl http2;
+    server_name api.cryptotechspace.com;
+    ssl_certificate /certs/certificate.crt;
+    ssl_certificate_key /certs/private.key;
+
+    location / {
+        proxy_set_header        Host $host;
+        proxy_set_header        X-Real-IP $remote_addr;
+        proxy_set_header        X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header        X-Forwarded-Proto $scheme;
+        proxy_pass http://cryptotechspace-server:8080;
+    }
+}
+
