--- a/default.conf
+++ b/default.conf
@@ -37,8 +37,8 @@ server {
 server {
     listen 443 ssl http2;
     server_name api.cryptotechspace.com;
-    ssl_certificate /certs/certificate.crt;
-    ssl_certificate_key /certs/private.key;
+    ssl_certificate /etc/letsencrypt/live/cryptotechspace.com/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/cryptotechspace.com/privkey.pem;
 
     location / {
         proxy_set_header        Host $host;
