--- a/default.conf
+++ b/default.conf
@@ -8,8 +8,8 @@ server {
 server {
     listen 443 ssl http2;
     server_name www.cryptotechspace.com;
-    ssl_certificate /certs/certificate.crt;
-    ssl_certificate_key /certs/private.key;
+    ssl_certificate /etc/letsencrypt/live/cryptotechspace.com/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/cryptotechspace.com/privkey.pem;
     return 301 https://cryptotechspace.com$request_uri;
 }
 
@@ -17,8 +17,8 @@ server {
     listen 443 ssl http2;
     server_name  cryptotechspace.com;
 
-    ssl_certificate /certs/certificate.crt;
-    ssl_certificate_key /certs/private.key;
+    ssl_certificate /etc/letsencrypt/live/cryptotechspace.com/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/cryptotechspace.com/privkey.pem;
 
     location / {
         root   /usr/share/nginx/html;
